--- a/content/resources/mit7_016f18ps2.md
+++ b/content/resources/mit7_016f18ps2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/bb292f96d9aa81ba971df92aea07be01_MIT7_016F18PS2.pdf
 file_type: application/pdf
+parent_uid: 6ed6bdac-cda3-a3b7-1732-ac482dac199c
 resourcetype: Document
 title: '7.016 Introductory Biology: Assignment 2'
 uid: bb292f96-d9aa-81ba-971d-f92aea07be01
