--- a/content/resources/mit7_016f18ps4.md
+++ b/content/resources/mit7_016f18ps4.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/83fc6e93516460a2d921156d7f65c117_MIT7_016F18PS4.pdf
 file_type: application/pdf
+parent_uid: 6ed6bdac-cda3-a3b7-1732-ac482dac199c
 resourcetype: Document
 title: '7.016 Introductory Biology: Assignment 4'
 uid: 83fc6e93-5164-60a2-d921-156d7f65c117
