--- a/content/resources/mit7_016f18ps5.md
+++ b/content/resources/mit7_016f18ps5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/aad6494ce4c532c50221988b7f468bc8_MIT7_016F18PS5.pdf
 file_type: application/pdf
+parent_uid: 6ed6bdac-cda3-a3b7-1732-ac482dac199c
 resourcetype: Document
 title: '7.016 Introductory Biology: Assignment 5'
 uid: aad6494c-e4c5-32c5-0221-988b7f468bc8
