--- a/content/resources/mit7_016f18ps6.md
+++ b/content/resources/mit7_016f18ps6.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/c396728a371ac2d607204c791588c538_MIT7_016F18PS6.pdf
 file_type: application/pdf
+parent_uid: 6ed6bdac-cda3-a3b7-1732-ac482dac199c
 resourcetype: Document
 title: '7.016 Introductory Biology: Assignment 6'
 uid: c396728a-371a-c2d6-0720-4c791588c538
