--- a/content/resources/mit7_016f18rec11.md
+++ b/content/resources/mit7_016f18rec11.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/81737dbae8b03b3c9385efbe4ffd6efd_MIT7_016F18rec11.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 11'
 uid: 81737dba-e8b0-3b3c-9385-efbe4ffd6efd
