--- a/content/resources/mit7_016f18rec13.md
+++ b/content/resources/mit7_016f18rec13.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/6be27fa54f0772d4cb544d8c8fb3e32e_MIT7_016F18rec13.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 13'
 uid: 6be27fa5-4f07-72d4-cb54-4d8c8fb3e32e
