--- a/content/resources/mit7_016f18rec17.md
+++ b/content/resources/mit7_016f18rec17.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/fe835e565fd05aacfe6f7f8e32dfb3bd_MIT7_016F18rec17.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 17'
 uid: fe835e56-5fd0-5aac-fe6f-7f8e32dfb3bd
