--- a/content/resources/mit7_016f18rec18.md
+++ b/content/resources/mit7_016f18rec18.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/19709ad0db0442df1d28f3a745b5ec00_MIT7_016F18rec18.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 18'
 uid: 19709ad0-db04-42df-1d28-f3a745b5ec00
