--- a/content/resources/mit7_016f18rec2.md
+++ b/content/resources/mit7_016f18rec2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/c2951632a108fa7f031d714c4001fb52_MIT7_016F18rec2.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 2'
 uid: c2951632-a108-fa7f-031d-714c4001fb52
