--- a/content/resources/mit7_016f18rec20.md
+++ b/content/resources/mit7_016f18rec20.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/e9eb5bc7aa0e9dc449239cac1263179b_MIT7_016F18rec20.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 20'
 uid: e9eb5bc7-aa0e-9dc4-4923-9cac1263179b
