--- a/content/resources/mit7_016f18rec22.md
+++ b/content/resources/mit7_016f18rec22.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/009c4095c8e2084cdaa9a2ebbc1c732c_MIT7_016F18rec22.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 22'
 uid: 009c4095-c8e2-084c-daa9-a2ebbc1c732c
