--- a/content/resources/mit7_016f18rec4.md
+++ b/content/resources/mit7_016f18rec4.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/072996b17bf8441120bcb71bf300535c_MIT7_016F18rec4.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 4'
 uid: 072996b1-7bf8-4411-20bc-b71bf300535c
