--- a/content/resources/mit7_016f18rec5.md
+++ b/content/resources/mit7_016f18rec5.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/2e855f8ee54fbd33e0d9474234767978_MIT7_016F18rec5.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 5'
 uid: 2e855f8e-e54f-bd33-e0d9-474234767978
