--- a/content/resources/mit7_016f18rec6.md
+++ b/content/resources/mit7_016f18rec6.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/1b4657e96df545e0edac86b7dd433cab_MIT7_016F18rec6.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 6'
 uid: 1b4657e9-6df5-45e0-edac-86b7dd433cab
