--- a/content/resources/mit7_016f18rec7.md
+++ b/content/resources/mit7_016f18rec7.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/2f5ea9669f0c273b35e015a804b70ca2_MIT7_016F18rec7.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 7'
 uid: 2f5ea966-9f0c-273b-35e0-15a804b70ca2
