--- a/content/resources/mit7_016f18rec8.md
+++ b/content/resources/mit7_016f18rec8.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/3565a44836fe869923e4fb608491e143_MIT7_016F18rec8.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 8'
 uid: 3565a448-36fe-8699-23e4-fb608491e143
