--- a/content/resources/mit7_016f18rec9.md
+++ b/content/resources/mit7_016f18rec9.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/7-016-introductory-biology-fall-2018/78e084548847d2d4ce00754db242a81a_MIT7_016F18rec9.pdf
 file_type: application/pdf
+parent_uid: a9fa686d-f823-808c-8ae5-b67f92e22385
 resourcetype: Document
 title: '7.016 Introductory Biology: Recitation 9'
 uid: 78e08454-8847-d2d4-ce00-754db242a81a
